fix: removed mytmpFunction.zip

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Monitoring/LoadBalancer/failover/~$$SLB-BackendPool-Failure-Arch.~vsdx
 Monitoring/LoadBalancer/failover/deployResources.ps1
+Monitoring/SubscriptionQuotas/mytmpFunction.zip
