--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Monitoring/LoadBalancer/failover/~$$SLB-BackendPool-Failure-Arch.~vsdx
 Monitoring/LoadBalancer/failover/deployResources.ps1
 Monitoring/SubscriptionQuotas/mytmpFunction.zip
+Monitoring/SubscriptionQuotas/mytmpFunction.zip
